--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit
-pandas
+Flask
+gunicorn
 numpy
-scikit-learn
+pandas
 joblib
-tensorflow-cpu==2.12.0
+tensorflow
 Pillow
-requests
+gdown
+scikit-learn
